FIX: Invitee avatar alignment in Safari 15

--- a/assets/stylesheets/common/discourse-post-event.scss
+++ b/assets/stylesheets/common/discourse-post-event.scss
@@ -234,7 +234,7 @@ $interested: #fb985d;
 
       .topic-invitee-avatar {
         position: relative;
-        display: flex;
+        display: inline-block;
 
         .avatar-flair {
           position: absolute;
